@@ -1,9 +1,8 @@
 package tech.jhipster.lite.module.infrastructure.secondary;
 
-import static tech.jhipster.lite.module.domain.JHipsterModule.*;
+import static tech.jhipster.lite.module.domain.JHipsterModule.LINE_BREAK;
 
 import java.io.IOException;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.stream.Collectors;
@@ -38,7 +37,7 @@ class PropertiesFileSpringPropertiesHandler {
     try {
       String properties = buildProperties(key, value);
 
-      Files.write(file, properties.getBytes(StandardCharsets.UTF_8));
+      Files.writeString(file, properties);
     } catch (IOException e) {
       throw GeneratorException.technicalError("Error updating properties: " + e.getMessage(), e);
     }
